--- a/ProyectosJava/Leccion01/estudiantes/src/main/resources/application.properties
+++ b/ProyectosJava/Leccion01/estudiantes/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-spring.application.name=estudiantes
+#Conexion MySQl
+spring.datasource.url=jdbc:mysql://localhost:3306/estudiantes
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+
