--- a/ProyectosJava/Leccion02/estudiantes/src/main/resources/application.properties
+++ b/ProyectosJava/Leccion02/estudiantes/src/main/resources/application.properties
@@ -4,5 +4,13 @@ spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+#Evitar que se cree el esquema nuevamente
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+
+#Desactivamos el tomcat
+spring.main.web-application-type=none
+
+
 
 
